fix: color contrast & using color and shape settings

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -7,7 +7,7 @@
 }
 
 .c-blue {
-	--col: #1848f5;
+	--col: #224ce7;
 }
 
 .c-yellow {
@@ -31,7 +31,7 @@
 }
 
 .c-purple {
-	--col: #5602dd;
+	--col: #4302ac;
 }
 
 .c-pink {
@@ -43,7 +43,7 @@
 }
 
 .c-sky-blue {
-	--col: #0aacfd;
+	--col: #44c1ff;
 }
 
 .s-square .card-inner {
